bk_ida/gobmkida/c1/update_liberties
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/update_liberties/src/engine/board.c:3381:30: error: use of undeclared identifier 'dword_A741AC'
if ( !byte_9AA89F[origin] && dword_A741AC[origin] != v8 ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/update_liberties/src/engine/board.c:3381:7: error: use of undeclared identifier 'byte_9AA89F'
if ( !byte_9AA89F[origin] && dword_A741AC[origin] != v8 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/update_liberties/src/engine/board.c:3387:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[origin] = v8; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/update_liberties/src/engine/board.c:3389:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[origin] && string_number[origin + 384] != v8 ) 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/update_liberties/src/obj/1/board.o] Error 1
